--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,23 @@
       name="description"
       content="We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist!"
     />
-    <meta name="og:title" content="Little Lemon Chicago"/>
-    <meta name="og:description" content="Family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist!"/>
-    <meta name="og:image" content="https://drive.google.com/file/d/1rc1iUPvlP9Qsxw6MgrTvG-YsRVmgkGNM/view?usp=sharing"/>
+    <meta name="og:title" content="Little Lemon Chicago" />
+    <meta
+      name="og:description"
+      content="Family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist!"
+    />
+    <meta
+      name="og:image"
+      content="https://drive.google.com/file/d/1rc1iUPvlP9Qsxw6MgrTvG-YsRVmgkGNM/view?usp=sharing"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:ital@0;1&family=Markazi+Text:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
