--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Little Lemon</title>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -55,5 +56,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://cdn.jsdelivr.net/gh/courseraap/capstone/api.js"></script>
   </body>
 </html>
